--- a/Ideal/MainWindow.xaml
+++ b/Ideal/MainWindow.xaml
@@ -5,8 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ideal"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="IDEAL Furniture" Height="350" Width="525">
+
+    <DockPanel Name="mainPanel" >
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File" >
+                <MenuItem Command="{x:Static local:MainWindow.ExitCommand}" >
+                    <MenuItem.CommandBindings>
+                        <CommandBinding Command="{x:Static local:MainWindow.ExitCommand}" 
+                                        Executed="ExecuteExitCommand" />
+                    </MenuItem.CommandBindings>
+                    <MenuItem.InputBindings>
+                        <KeyBinding Command="{x:Static local:MainWindow.ExitCommand}"
+                                    Key="F4" Modifiers="Alt" />
+                    </MenuItem.InputBindings>
+                </MenuItem>
+            </MenuItem>
+            <MenuItem Header="_Tools" >
+            </MenuItem>
+            <MenuItem Header="_Help" >
+            </MenuItem>
+        </Menu>
+    </DockPanel>
+
+
 </Window>
