--- a/Ideal/View/AccountDetailsPage.xaml
+++ b/Ideal/View/AccountDetailsPage.xaml
@@ -13,12 +13,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
  -->
-<Page x:Class="Ideal.View.AccountDetailsPage"
+<Page x:Class="Ideal.AccountDetailsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Ideal.View"
+      xmlns:local="clr-namespace:Ideal"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="AccountDetailsPage">
