--- a/Ideal/View/RunningAccountsPage.xaml
+++ b/Ideal/View/RunningAccountsPage.xaml
@@ -13,17 +13,28 @@
      See the License for the specific language governing permissions and
      limitations under the License.
  -->
-<Page x:Class="Ideal.View.RunningAccountsPage"
+<Page x:Class="Ideal.RunningAccountsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Ideal.View"
+      xmlns:local="clr-namespace:Ideal"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="RunningAccountsPage">
 
-    <Grid>
+    <DockPanel>
+
+        <!-- DATA context -->
+        <DockPanel.DataContext>
+            <local:RunningAccountsViewModel />
+        </DockPanel.DataContext>
+
         <Label x:Name="label" Content="Running Accounts Page" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-    </Grid>
+
+        <!-- Accounts table -->
+        <DataGrid IsReadOnly="True"  DockPanel.Dock="Top" HorizontalGridLinesBrush="#FFF5F5F5" VerticalGridLinesBrush="#FFF5F5F5"
+                  HorizontalAlignment="Left" Margin="5" VerticalAlignment="Top" ItemsSource="{Binding Accounts}" 
+                  AlternationCount="2" AlternatingRowBackground="#FFFBFBFB"/>
+    </DockPanel>
 </Page>
