--- a/Ideal/View/RunningAccountsPage.xaml
+++ b/Ideal/View/RunningAccountsPage.xaml
@@ -157,7 +157,38 @@
                     </chart:AreaSeries.AdornmentsInfo>
                 </chart:AreaSeries>
             </chart:SfChart>
-        
+
+            <!-- Progress Chart -->
+            <chart:SfChart Grid.Column="1"
+                       Background="White" Margin="2" Height="200" Width="200"
+                       VerticalAlignment="Bottom" AreaBorderThickness="0">
+                <chart:SfChart.Header>
+                    <TextBlock FontSize="15" Foreground="Black" FontFamily="Segoe UI" 
+                           Margin="0,-10,0,0">Progress</TextBlock>
+                </chart:SfChart.Header>
+                <chart:SfChart.Legend>
+                    <chart:ChartLegend Visibility="Visible"/>
+                </chart:SfChart.Legend>
+
+                <chart:DoughnutSeries EnableAnimation="True" Palette="Custom" 
+                                ItemsSource="{Binding TotalProgress}"  XBindingPath="Item" 
+                                YBindingPath="Units" ShowTooltip="True" DoughnutCoefficient="1" >
+                    <chart:DoughnutSeries.ColorModel>
+                        <chart:ChartColorModel>
+                            <chart:ChartColorModel.CustomBrushes>
+                                <SolidColorBrush Color="#99bcbcbc"/>
+                                <SolidColorBrush Color="#780000FF"/>
+                            </chart:ChartColorModel.CustomBrushes>
+                        </chart:ChartColorModel>
+                    </chart:DoughnutSeries.ColorModel>
+                    <chart:DoughnutSeries.AdornmentsInfo>
+                        <chart:ChartAdornmentInfo AdornmentsPosition="Top" HorizontalAlignment="Center"
+                                              VerticalAlignment="Center" ShowLabel="True" ShowMarker="True"
+                                              SegmentLabelContent="Percentage" Foreground="Gray" FontSize="12" Margin="2"/>
+                    </chart:DoughnutSeries.AdornmentsInfo>
+                </chart:DoughnutSeries>
+            </chart:SfChart>
+
         </Grid>
 
         <!-- Accounts table -->
