--- a/Ideal/View/RunningAccountsPage.xaml
+++ b/Ideal/View/RunningAccountsPage.xaml
@@ -297,8 +297,43 @@
                               ItemsSource="{Binding Weeks}" XBindingPath="Item" YBindingPath="Collected" 
                               ShowTooltip="True" Stroke="#FF0000FF" Interior="#990000FF" StrokeThickness="2" />
         </chart:SfChart>
-        
-        
+
+
+        <!-- Accounts chart -->
+        <chart:SfChart DockPanel.Dock="Top" SideBySideSeriesPlacement="False" AreaBorderBrush="#8e8e8e" 
+                       Background="White" Margin="2" Height="250" 
+                       VerticalAlignment="Bottom" AreaBorderThickness="0,1,1,1">
+            <chart:SfChart.Header>
+                <TextBlock FontSize="15" Foreground="Black" FontFamily="Segoe UI" 
+                           Margin="0,-10,0,0">Cost Comparation</TextBlock>
+            </chart:SfChart.Header>
+            <chart:SfChart.PrimaryAxis>
+                <chart:CategoryAxis  FontSize="12" Foreground="Black" />
+            </chart:SfChart.PrimaryAxis>
+            <chart:SfChart.SecondaryAxis>
+                <chart:NumericalAxis FontSize="12" Header="Money" Foreground="Black" />
+            </chart:SfChart.SecondaryAxis>
+            <chart:SfChart.Legend>
+                <chart:ChartLegend Visibility="Visible"/>
+            </chart:SfChart.Legend>
+            <chart:SfChart.Behaviors>
+                <chart:ChartZoomPanBehavior EnableZoomingToolBar="True" ToolBarItemHeight="15" 
+                                              ToolBarItemWidth="15" ToolBarBackground="#00000000" 
+                                              ToolBarItems="All" ToolBarItemMargin="0"/>
+            </chart:SfChart.Behaviors>
+
+            <chart:ColumnSeries EnableAnimation="True" Interior="#78FFD700" SegmentSpacing="0.75"
+                                ItemsSource="{Binding CostComparations}"  XBindingPath="AccountID" 
+                                YBindingPath="ItemPrice" Label="ItemPrice" ShowTooltip="True" />
+            <chart:ColumnSeries EnableAnimation="True" Interior="#99bcbcbc"
+                                ItemsSource="{Binding CostComparations}"  XBindingPath="AccountID" 
+                                YBindingPath="Expected" Label="Expected" ShowTooltip="True" />
+            <chart:ColumnSeries EnableAnimation="True" Interior="#780000FF" SegmentSpacing="0.5"
+                                ItemsSource="{Binding CostComparations}"  XBindingPath="AccountID" 
+                                YBindingPath="Collected" Label="Collected" ShowTooltip="True" />
+        </chart:SfChart>
+
+
         <!-- Accounts table -->
         <DataGrid IsReadOnly="True"  DockPanel.Dock="Top" HorizontalGridLinesBrush="#FFF5F5F5" VerticalGridLinesBrush="#FFF5F5F5"
                   HorizontalAlignment="Left" Margin="5" VerticalAlignment="Top" ItemsSource="{Binding Accounts}" 
